--- a/user-profile.html
+++ b/user-profile.html
@@ -57,7 +57,7 @@
   </header>
 
     <!-- Main Content -->
-    <main id=""> <!-- PAGE BACKGROUND GOES IN THIS CONTAINER -->
+    <main id="" class="b"> <!-- PAGE BACKGROUND GOES IN THIS CONTAINER -->
 
       <!-- Top Buttons -->
       <a href="about-us.html">
@@ -68,6 +68,44 @@
       <!---------------------------->
       <!-- ADD PAGE CONTENT BELOW -->
       <!---------------------------->
+      <div class="profile-container">
+        <h1>User Profile</h1>
+        
+        <div class="user-card">
+            <img src="placeholder.jpg" alt="User Photo" class="user-photo">
+            <div class="user-info">
+                <p><strong>Username:</strong> User123</p>
+                <p><strong>Buddyname:</strong> Buddy</p>
+                <p><strong>Buddy Age:</strong> 12 weeks old</p>
+                <p><strong>Buddy Personality:</strong> Friendly</p>
+                <p><strong>Favourite Class:</strong> COMP1100</p>
+            </div>
+        </div>
+
+        <div class="user-summary">
+            <h2>Day Streak</h2>
+            <p><span class="streak-number">5</span> days</p>
+        </div>
+        
+        <div class="friends-list">
+            <h2>Friends</h2>
+            <ul>
+                <li>Friend 1</li>
+                <li>Friend 2</li>
+                <li>Friend 3</li>
+            </ul>
+        </div>
+
+        <div class="progress-stats">
+            <h2>Progress Stats</h2>
+            <ul>
+                <li>Tasks Completed: 10</li>
+                <li>Goals Achieved: 2</li>
+                <li>Self-Care Activities: 5</li>
+            </ul>
+        </div>
+      </div>
+
       <nav id="footerPlaceholder"></nav>
 
     </main>
