--- a/user-profile.html
+++ b/user-profile.html
@@ -11,10 +11,13 @@
   <!-- Bootstrap Library CSS CDN go here -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Boostrap Library JS CDN  go here -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 
   <!-- Other libraries go here -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -56,21 +59,56 @@
     </nav>
   </header>
 
-    <!-- Main Content -->
-    <main id=""> <!-- PAGE BACKGROUND GOES IN THIS CONTAINER -->
+  <!-- Main Content -->
+  <main id=""> <!-- PAGE BACKGROUND GOES IN THIS CONTAINER -->
 
-      <!-- Top Buttons -->
-      <a href="about-us.html">
-        <div id="about-us-btn" class="nav-btn" alt=""></div>
-      </a>
-      <button id="logout-btn" class="nav-btn" onclick="logout()"></button>
+    <!-- Top Buttons -->
+    <a href="about-us.html">
+      <div id="about-us-btn" class="nav-btn" alt=""></div>
+    </a>
+    <button id="logout-btn" class="nav-btn" onclick="logout()"></button>
 
-      <!---------------------------->
-      <!-- ADD PAGE CONTENT BELOW -->
-      <!---------------------------->
-      <nav id="footerPlaceholder"></nav>
+    </div>
+    <img id="buddy" src="./assets/animals/bear-stand.svg" height="500" width="500">
+    </div>
 
-    </main>
+
+
+
+
+    <div class="container mt-5">
+      <fieldset class="mb-3" id="userInfoFields" disabled>
+        <div class="form-group">
+          <label id="task-heading">Buddy Name</label>
+          <input type="text" id="Buddy-name" class="form-control" placeholder="Enter name">
+        </div>
+
+        <label for="dropdown">Choose an option:</label>
+        <select id="dropdown" name="options">
+          <option value="bear-sit">bear-sit</option>
+          <option value="bear-stand">bear-stand</option>
+          <option value="deer-stand">deer-stand</option>
+          <option value="fox-stand">fox-stand</option>
+        </select>
+
+      </fieldset>
+      <div class="d-flex justify-content-end mt-5">
+        <button type="button" class="btn btn-secondary" id="edit-btn" onclick="editInfo()">Edit</button>
+        <button type="button" class="btn btn-info" id="cancel-btn" onclick="cancelEdit()">Cancel</button>
+        <button type="button" class="btn btn-info" onclick="saveInfo()">Save</button>
+      </div>
+
+    </div>
+
+
+
+
+    <!---------------------------->
+    <!-- ADD PAGE CONTENT BELOW -->
+    <!---------------------------->
+    <nav id="footerPlaceholder"></nav>
+
+  </main>
 
   <!---------------------------------------------->
   <!-- Your own JavaScript functions go here    -->
@@ -80,6 +118,7 @@
   <script src="./scripts/script.js"></script>
   <script src="./scripts/firebase_API.js"></script>
   <script src="./scripts/skeleton.js"></script>
+  <script src="./scripts/user-profile.js"></script>
 </body>
 
 </html>
