--- a/settings.html
+++ b/settings.html
@@ -112,12 +112,10 @@
         <input id="MusicValue" class="ms-3" placeholder="Enter volume">
       </div>
 
-      <div class="row mb-3">
-        <div class="col-sm-10 offset-sm-2">
-          <button type="button" class="btn btn-secondary" id="edit-btn" onclick="edituserInfo()">Edit</button>
-          <button type="button" class="btn btn-info" id="cancel-btn" onclick="cancelEdit()">Cancel</button>
-          <button type="submit" class="btn btn-primary" onclick="saveUserInfo()">Save Settings</button>
-        </div>
+      <div class="d-flex justify-content-end mt-5">
+        <button type="button" class="btn btn-secondary" id="edit-btn" onclick="edituserInfo()">Edit</button>
+        <button type="button" class="btn btn-info" id="cancel-btn" onclick="cancelEdit()">Cancel</button>
+        <button type="submit" class="btn btn-primary" onclick="saveUserInfo()">Save Settings</button>
       </div>
       </form>
     </div>
