--- a/user-profile.html
+++ b/user-profile.html
@@ -79,10 +79,10 @@
         <div class="user-card">
           <img src="placeholder.jpg" alt="User Photo" class="user-photo" id="buddy">
           <div class="user-info">
-            <p><strong>Username:</strong> User123</p>
-            <p><strong>Buddyname:</strong> Buddy</p>
+            <p><strong>Username:</strong> <span id="username">User123</span></p>
+            <p><strong>Buddyname:</strong> <span id="buddy-name">User123</span></p>
             <p><strong>Buddy Age:</strong> 12 weeks old</p>
-            <p><strong>Buddy Personality:</strong> Friendly</p>
+            <p><strong>Buddy Personality:</strong> <span id="buddy-personality">User123</span></p>
             <p><strong>Favourite Class:</strong> COMP1800</p>
           </div>
         </div>
