--- a/user-profile.html
+++ b/user-profile.html
@@ -8,36 +8,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Bootstrap Library CSS CDN go here -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <!-- Boostrap Library JS CDN  go here -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-
-<<<<<<< Updated upstream
-  <!-- Bootstrap Library CSS CDN go here -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Boostrap Library JS CDN  go here -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Boostrap Library JS CDN  go here -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-=======
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Other libraries go here -->
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
+      rel="stylesheet"/>
     <link rel="stylesheet" href="https://use.typekit.net/rkb7vro.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
@@ -50,7 +33,6 @@
       href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css"
     />
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
->>>>>>> Stashed changes
 
     <!-- Link to styles of your own -->
     <link rel="stylesheet" href="./styles/style.css" />
@@ -80,17 +62,8 @@
       </nav>
     </header>
 
-  <!-- Main Content -->
-  <main id=""> <!-- PAGE BACKGROUND GOES IN THIS CONTAINER -->
-
     <!-- Main Content -->
-<<<<<<< Updated upstream
-    <main id="" class="b"> <!-- PAGE BACKGROUND GOES IN THIS CONTAINER -->
-=======
-    <main id="" class="bg-container">
-      <!-- PAGE BACKGROUND GOES IN THIS CONTAINER -->
-
->>>>>>> Stashed changes
+    <main id="user-profile" class="bg-container"> <!-- PAGE BACKGROUND GOES IN THIS CONTAINER -->
       <!-- Top Buttons -->
       <a href="about-us.html">
         <div id="about-us-btn" class="nav-btn" alt=""></div>
@@ -102,8 +75,6 @@
       <!---------------------------->
       <div class="profile-container main-content">
         <h1>User Profile</h1>
-<<<<<<< Updated upstream
-
         <div class="user-card">
           <img src="placeholder.jpg" alt="User Photo" class="user-photo" id="buddy">
           <div class="user-info">
@@ -118,45 +89,6 @@
         <div class="user-summary">
           <h2>Day Streak</h2>
           <p><span class="streak-number">5</span> days</p>
-=======
-        <div id="user-profile-info">
-          <div id="user-card" class="user-card">
-            <img src="placeholder.jpg" alt="User Photo" class="user-photo" />
-            <div class="user-info">
-              <p><strong>Username:</strong> User123</p>
-              <p><strong>Buddyname:</strong> Buddy</p>
-              <p><strong>Buddy Age:</strong> 12 weeks old</p>
-              <p><strong>Buddy Personality:</strong> Friendly</p>
-              <p><strong>Favourite Class:</strong> COMP1800</p>
-            </div>
-          </div>
-          <div id="user-stats">
-            <div class="user-summary">
-              <h2>Day Streak</h2>
-              <p><span class="streak-number">5</span> days</p>
-            </div>
-
-            <div class="progress-stats">
-              <h2>Progress Stats</h2>
-              <ul>
-                <li>Tasks Completed: 10</li>
-                <li>Goals Achieved: 2</li>
-                <li>Self-Care Activities: 5</li>
-              </ul>
-            </div>
-
-          </div>
->>>>>>> Stashed changes
-        </div>
-
-        <div class="friends-list">
-          <h2>Friends</h2>
-<<<<<<< Updated upstream
-          <ul>
-            <li>Friend 1</li>
-            <li>Friend 2</li>
-            <li>Friend 3</li>
-          </ul>
         </div>
 
         <div class="progress-stats">
@@ -167,54 +99,21 @@
             <li>Self-Care Activities: 5</li>
           </ul>
         </div>
-      </div>
 
-      <nav id="footerPlaceholder"></nav>
-
-
-
-
-
-
-
-
-
-
-      <!---------------------------->
-      <!-- ADD PAGE CONTENT BELOW -->
-      <!---------------------------->
-      <nav id="footerPlaceholder"></nav>
-
-    </main>
-
-    <!---------------------------------------------->
-    <!-- Your own JavaScript functions go here    -->
-    <!---------------------------------------------->
-
-    <!-- Link to scripts of your own -->
-    <script src="./scripts/script.js"></script>
-    <script src="./scripts/firebase_API.js"></script>
-    <script src="./scripts/skeleton.js"></script>
-    <script src="./scripts/user-profile.js"></script>
-</body>
-
-</html>
-=======
-          <div class="friend-box">
-            <h3>Nick S.</h3>
-            <img class="friend-img" src="/assets/imgs/nick-placeholder.jpg" />
-            <p>Pee pee poo poo</p>
-          </div>
-          <div class="friend-box">
-            <h3>Timmy K.</h3>
-            <img class="friend-img" src="/assets/imgs/timmy-placeholder.jpg" />
-            <p>Pee pee poo poo</p>
-          </div>
-          <div class="friend-box">
-            <h3>Caley R.</h3>
-            <img class="friend-img" src="/assets/imgs/caley-placeholder.jpg" />
-            <p>Pee pee poo poo</p>
-          </div>
+        <div class="friend-box">
+          <h3>Nick S.</h3>
+          <img class="friend-img" src="/assets/imgs/nick-placeholder.jpg" />
+          <p>Pee pee poo poo</p>
+        </div>
+        <div class="friend-box">
+          <h3>Timmy K.</h3>
+          <img class="friend-img" src="/assets/imgs/timmy-placeholder.jpg" />
+          <p>Pee pee poo poo</p>
+        </div>
+        <div class="friend-box">
+          <h3>Caley R.</h3>
+          <img class="friend-img" src="/assets/imgs/caley-placeholder.PNG" />
+          <p>Pee pee poo poo</p>
         </div>
       </div>
     </main>
@@ -229,6 +128,8 @@
     <script src="./scripts/script.js"></script>
     <script src="./scripts/firebase_API.js"></script>
     <script src="./scripts/skeleton.js"></script>
-  </body>
+    <script src="./scripts/user-profile.js"></script>
+</body>
+
 </html>
->>>>>>> Stashed changes
+
