--- a/user-profile.html
+++ b/user-profile.html
@@ -78,19 +78,20 @@
           <div id="user-info">
             <div id="user-card" class="user-card">
               <h1>User Profile</h1>
-              <img src="placeholder.jpg" alt="User Photo" class="user-photo" id="buddy">
-              <div class="user-info">
+              <div id="user-photo-streak">
+                <img src="/assets/animals/bear-stand.svg" alt="User Photo" class="user-photo" id="buddy">
+                <div class="user-summary">
+                  <h2>Day Streak</h2>
+                  <p><span class="streak-number">5</span> days</p>
+                </div>
+              </div>
+              <div class="user-settings-info">
                 <p><strong>Your Name:</strong> <span id="username">User123</span></p>
                 <p><strong>Buddy Name:</strong> <span id="buddy-name">User123</span></p>
                 <p><strong>Buddy Age:</strong> <span id="buddy-age">0 days old</span></p>
                 <p><strong>Buddy Personality:</strong> <span id="buddy-personality">User123</span></p>
                 <p><strong>Favourite Class:</strong> COMP1800</p>
               </div>
-            </div>
-
-            <div class="user-summary">
-              <h2>Day Streak</h2>
-              <p><span class="streak-number">5</span> days</p>
             </div>
           </div>
 
